--- a/app/globals.css
+++ b/app/globals.css
@@ -25,7 +25,7 @@ button {
 }
 
 input, textarea {
-  @apply px-2 py-1 rounded text-black bg-[#f2f2f2];
+  @apply p-2 rounded text-black bg-[#f2f2f2];
 }
 
 .input-label {
